# psp2-sys

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  Makefile.toml  README.md  armv7-vita-eabihf.json  build.rs
ci/travis/: setup.sh
examples/hello_rust_world/: .gitignore  Cargo.toml  Makefile.toml  README.md  armv7-vita-eabihf.json
examples/hello_rust_world/src/: lib.rs
examples/hello_rust_world/src/debug/: font.rs  mod.rs  screen.rs
src/: ctrl.rs  display.rs  lib.rs  system_param.rs  types.rs
src/dialog/: common.rs  message.rs
src/graphics/: gxm.rs  mod.rs
src/io/: devctl.rs  dirent.rs  fcntl.rs  mod.rs  stat.rs
src/kernel/: clib.rs  mod.rs  processmgr.rs  rng.rs  sysmem.rs  threadmgr.rs
