[package]
name        = "psp2-sys"
version     = "0.2.2"
authors     = [
    "Martin Larralde <martin.larralde@ens-cachan.fr>",
    "Gabriel GRONDIN <gglinnk@protonmail.com>"
]
edition     = "2018"
license     = "MIT"
description = "Unsafe Rust FFI bindings to the psp2 headers"
repository  = "https://github.com/vita-rust/psp2-sys"
readme      = "README.md"
keywords    = ["psvita", "ps vita", "ps-vita", "psp2"]
categories  = ["no-std", "external-ffi-bindings", "os", "hardware-support"]
exclude     = ["ci/travis/setup.sh", "Makefile.toml"]

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name        = "psp2_sys"
path        = "src/lib.rs"

[badges]
travis-ci   = { repository = "vita-rust/psp2-sys" }
maintenance = { status = "actively-developed" }

[features]
default = []
unsafe = []
dox = []
